# qbittorrent

./: .gitignore  README.md  create_shortcut.sh  docker-compose.yml  ensure_config.sh  pyproject.toml  test_qbittorrent.py
downloads/: readme.txt
