[tool.poetry]
name = "qbittorrent-test"
version = "0.1.0"
description = "Testing suite for qBittorrent Docker setup"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
requests = "^2.31.0"
pytest-timeout = "^2.0.0"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["test_qbittorrent.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
